[project]
name = "KaiheilaCardBuilder"
version = "1.3.0"
description = "一个构建开黑啦卡片的工具"
authors = [
    {name = "DancingSnow", email = "1121149616@qq.com"},
    {name = "kexue", email = "xana278@foxmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
